// prisma/schema.prisma

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  BUYER
  SELLER
  ADMIN
}

enum OrderStatus {
  PENDING
  COMPLETED
  FAILED
}

enum ProductStatus {
  PENDING
  APPROVED
  REJECTED
}

enum PlanDuration {
  MONTHLY
  THREE_MONTHS
  YEARLY
}

model User {
  id               Int                @id @default(autoincrement())
  email            String             @unique
  fullName         String             @default("")
  password         String
  role             Role               @default(BUYER)
  isBanned         Boolean            @default(false) // Tracks account suspension status
  storeName        String?
  phone            String?
  bio              String?
  createdAt        DateTime           @default(now())
  updatedAt        DateTime           @updatedAt

  products         Product[] 
  orders           Order[]   
  reviews          Review[]
  subscriptions    UserSubscription[]
}

model Product {
  id          Int           @id @default(autoincrement())
  title       String
  description String?
  price       Float
  category    String        @default("General") // Expected values: 'Course', 'Book', 'License'
  fileUrl     String        @default("")        // Used for Book downloads or stream link references
  status      ProductStatus @default(PENDING)   
  sellerId    Int
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  seller      User          @relation(fields: [sellerId], references: [id])
  orderItems  OrderItem[]
  licenses    License[]
  reviews     Review[]
}

model Order {
  id            Int           @id @default(autoincrement())
  buyerId       Int
  totalAmount   Float
  status        OrderStatus   @default(PENDING)
  createdAt     DateTime      @default(now())

  buyer         User          @relation(fields: [buyerId], references: [id])
  items         OrderItem[]
  transaction   Transaction?
}

model OrderItem {
  id        Int     @id @default(autoincrement())
  orderId   Int
  productId Int
  price     Float

  order     Order    @relation(fields: [orderId], references: [id])
  product   Product  @relation(fields: [productId], references: [id])
  license   License?
}

model SubscriptionPlan {
  id          Int                @id @default(autoincrement())
  title       String
  description String?
  price       Float
  duration    PlanDuration       @default(MONTHLY)
  isActive    Boolean            @default(true)
  createdAt   DateTime           @default(now())
  
  subscriptions UserSubscription[]
}

model UserSubscription {
  id                 Int              @id @default(autoincrement())
  userId             Int
  subscriptionPlanId Int
  startDate          DateTime         @default(now())
  endDate            DateTime
  isActive           Boolean          @default(true)
  createdAt          DateTime         @default(now())

  user               User             @relation(fields: [userId], references: [id])
  plan               SubscriptionPlan @relation(fields: [subscriptionPlanId], references: [id])
}

model License {
  id            Int       @id @default(autoincrement())
  licenseKey    String    @unique
  productId     Int
  orderItemId   Int       @unique
  downloadCount Int       @default(0)  // Applicable only to downloaded books/software keys
  expiresAt     DateTime?              
  isValid       Boolean   @default(true)
  createdAt     DateTime  @default(now())

  product       Product   @relation(fields: [productId], references: [id])
  orderItem     OrderItem @relation(fields: [orderItemId], references: [id])
}

model Transaction {
  id            Int       @id @default(autoincrement())
  orderId       Int       @unique
  amount        Float
  paymentMethod String
  status        String
  authority     String?   @unique
  createdAt     DateTime  @default(now())

  order         Order     @relation(fields: [orderId], references: [id])
}

model Review {
  id        Int      @id @default(autoincrement())
  rating    Int
  comment   String?
  userId    Int
  productId Int
  createdAt DateTime @default(now())

  user      User     @relation(fields: [userId], references: [id])
  product   Product  @relation(fields: [productId], references: [id])
}